--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ikeirnez</groupId>
     <artifactId>UUIDCompatibility</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
