--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: UUIDCompatibility
 version: ${project.version}
 author: iKeirNez
+softdepend: [Essentials]
 main: com.ikeirnez.uuidcompatibility.UUIDCompatibility
