--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ikeirnez</groupId>
     <artifactId>UUIDCompatibility</artifactId>
-    <version>1.12-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
@@ -16,8 +16,8 @@
             <url>http://repo.ess3.net/content/groups/public</url>
         </repository>
         <repository>
-            <id>Plugin Metrics</id>
-            <url>http://repo.mcstats.org/content/repositories/public</url>
+            <id>tools-repo</id>
+            <url>http://repository.ops4j.org/maven2/</url>
         </repository>
     </repositories>
     <build>
@@ -43,7 +43,7 @@
                 <version>2.2</version>
                 <executions>
                     <execution>
-                        <id>include-metrics</id>
+                        <id>include-libraries</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
@@ -51,7 +51,8 @@
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>org.mcstats.bukkit:metrics</include>
+                                    <include>org.javassist:javassist</include>
+                                    <include>sun.jdk:tools</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -74,10 +75,14 @@
             <version>2.14-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.mcstats.bukkit</groupId>
-            <artifactId>metrics</artifactId>
-            <version>R8-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>sun.jdk</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.8</version>
         </dependency>
     </dependencies>
 </project>
