--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ikeirnez</groupId>
     <artifactId>UUIDCompatibility</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.01-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
@@ -17,7 +17,7 @@
         </repository>
         <repository>
             <id>tools-repo</id>
-            <url>http://repository.ops4j.org/maven2/</url>
+            <url>http://repository.ops4j.org/maven2</url>
         </repository>
     </repositories>
     <build>
@@ -52,7 +52,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>org.javassist:javassist</include>
-                                    <include>sun.jdk:tools</include>
+                                    <include>tools:tools</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -80,9 +80,9 @@
             <version>3.18.2-GA</version>
         </dependency>
         <dependency>
-            <groupId>sun.jdk</groupId>
+            <groupId>tools</groupId>
             <artifactId>tools</artifactId>
-            <version>1.8</version>
+            <version>1.5.0</version>
         </dependency>
     </dependencies>
 </project>
