No longer requires hot swapping (no need to edit startup script) YAY!! This also means tools.jar is no longer needed, greatly reducing the size of the JAR Added a debug mode (less spam on startup if disabled, a lot more spam if enabled ;)) Small improvements Fix code being executed twice on player disconnect

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,7 @@
 #   tabList - Show original name in tab list
 #   plugins - A list of plugins which should be given UUID compatibility
 # notifyPlayers - When a player joins and their username differs from their original name, should they be notified?
+# debug - Show extra information about the plugin for debugging purposes
 
 enabled: false
 
@@ -21,3 +22,4 @@ showOriginalNameIn:
     - GriefPrevention
 
 notifyPlayers: true
+debug: false
