Add license and re-add Metrics

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: UUIDCompat
+name: UUIDCompatibility
 version: ${project.version}
 author: iKeirNez
 softdepend: [Essentials]
-main: com.ikeirnez.uuidcompatibility.UUIDCompat
+main: com.ikeirnez.uuidcompatibility.UUIDCompatibility
