--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ikeirnez</groupId>
     <artifactId>UUIDCompatibility</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.11-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
@@ -14,6 +14,10 @@
         <repository>
             <id>ess-repo</id>
             <url>http://repo.ess3.net/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>Plugin Metrics</id>
+            <url>http://repo.mcstats.org/content/repositories/public</url>
         </repository>
     </repositories>
     <build>
@@ -48,6 +52,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>org.javassist:javassist</include>
+                                    <include>org.mcstats.bukkit:metrics</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -73,6 +78,11 @@
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.18.2-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mcstats.bukkit</groupId>
+            <artifactId>metrics</artifactId>
+            <version>R8-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
