--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ikeirnez</groupId>
     <artifactId>UUIDCompatibility</artifactId>
-    <version>2.15-SNAPSHOT</version>
+    <version>2.15</version>
     <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
         <repository>
             <id>ess-repo</id>
             <url>http://repo.ess3.net/content/groups/public</url>
@@ -61,10 +65,8 @@
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-server</artifactId>
-            <scope>system</scope>
+            <artifactId>spigot-api</artifactId>
             <version>1.8-R0.1-SNAPSHOT</version>
-            <systemPath>${project.basedir}/libraries/spigot-1.8.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.ess3</groupId>
